--- a/src/components/Comments/comments.css
+++ b/src/components/Comments/comments.css
@@ -17,3 +17,22 @@
     border: none;
     border-radius: 4px;
 }
+
+.comment {
+    padding: 10px;
+    border-left: 2px solid #e6b1b1;
+}
+
+.actions {
+    font-size: 80%;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.actions span {
+    padding: 4px;
+}
+
+.actions span:hover {
+    background-color: rgb(202, 178, 178);
+}
